--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 </head>
 <body>
 <div class="container">
-  <a href="#"><img src="/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="image-equilibrium" id="main-nft"></a>
+  <a href="#"><img src="image-equilibrium.jpg" alt="image-equilibrium" id="main-nft"></a>
   <h1 class="head"> Equilibrium #3429</h1>
 <p class="info"> Our Equilibrium collection promotes balance and calm.</p>
 <div class="stuff">
-  <h1> <img src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="eth" class="eth">  <span>0.041 ETH</span></h1>
-  <p> <img src="/nft-preview-card-component-main/images/icon-clock.svg" alt="image" class="clock"><span>3 days left</span></p>  
+  <h1> <img src="icon-ethereum.svg" alt="eth" class="eth">  <span>0.041 ETH</span></h1>
+  <p> <img src="icon-clock.svg" alt="image" class="clock"><span>3 days left</span></p>  
 </div>
 <hr class="line">
 <div class="owner">
-  <img src="/nft-preview-card-component-main/images/image-avatar.png" alt="image-avatar" class="image-avatar">
+  <img src="image-avatar.png" alt="image-avatar" class="image-avatar">
   <p class="name">Creation of <a>Jules Wyvern</a></p>
   </div>
 </div>
